# expreval

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py  update.sh
src/exprcalc/: __init__.py
src/expreval/: __init__.py
tests/: test_cli.py  test_evaluate.py
